# models/book.js
@@ -1,6 +1,16 @@
 mongoose = require('mongoose');
 
 const bookSchema = new mongoose.Schema({
+    isbn: Number,
+    title: String,
+    author: String,
+    price: Number,
+    selleremail: String,
+    used: Boolean,
+    location: {
+        city: String,
+        street: String
+    }
 });
 
 const Book = mongoose.model('Book', bookSchema);
